# bible-text

./: Cargo.toml
src/: biblegateway.rs  lib.rs  main.rs
src/snapshots/: bible_text__biblegateway__tests__alternate_verse_beginnings.snap  bible_text__biblegateway__tests__get_ge_1.snap  bible_text__biblegateway__tests__get_hag_2.snap  bible_text__biblegateway__tests__get_jude.snap  bible_text__biblegateway__tests__get_psalm_with_intro.snap  bible_text__biblegateway__tests__test_get_ge_1-ESV.snap  bible_text__biblegateway__tests__test_get_ge_1-HCSB.snap  bible_text__biblegateway__tests__test_get_ge_1-KJV.snap  bible_text__biblegateway__tests__test_get_ge_1-NASB.snap  bible_text__biblegateway__tests__test_get_ge_1-NIV.snap  bible_text__biblegateway__tests__test_get_ge_1-NKJV.snap  bible_text__biblegateway__tests__test_get_ge_1-NLT.snap  bible_text__biblegateway__tests__words_of_christ.snap
tests/: biblegateway_tests.rs
tests/cache/biblegateway/: NIV-Ge-1.response
