[package]
name = "bible-text"
version = "0.1.0-alpha.1"
edition = "2024"
authors = ["Chris Hamer-Hodges <chris.hhodges@gmail.com>"]
license = "Apache-2.0 OR MIT"

[dependencies]
bible-data = { version = "0.1.0", path = "../bible-data" }
html-escape = "0.2.13"
quick-xml = "0.38.4"
reqwest = {"version" = "0.12.27", "features" = ["blocking"]}
scraper = "0.25.0"

[dev-dependencies]
insta = { version = "1.45.1", features = ["yaml"] }
